--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -14,11 +14,21 @@
     color: white;
     font-size: 2em;
     font-family: Ubuntu;
-    text-align: center;
+    text-align: left;
     line-height: 14vh;
+    padding-left: 11%;
 }
-
+.logo img{
+    padding: 1%;
+    padding-left: 5%;
+    width: 100px;
+    position: absolute;
+}
 /* --------------------------- Form --------------------------- */
+.form{
+    background-color: #760000;
+    margin-top: -49px;
+}
 
 #input-data {
     width: 90vw;
@@ -111,4 +121,74 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
     border-width: 0px;
     background-color: transparent;
     cursor: pointer;
+}
+
+
+/* --------------------------- Menu-Dropdown --------------------------- */
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.navbar {
+  overflow: hidden;
+  background-color: white;
+  padding-left: 4.5%;
+}
+
+.navbar a {
+  float: left;
+  font-weight: bold;
+  font-size: 20px;
+  color: #760000;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 20px;
+  font-weight: bold;  
+  border: none;
+  outline: none;
+  color: #760000;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: #76000066;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: #760000;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  font-weight: bold;
+}
+
+.dropdown-content a:hover {
+  background-color:  #76000066;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
