--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -40,7 +40,7 @@ html {
     font-family: Ubuntu;
     margin: 0 auto;
     margin-top: 5vh;
-    display: flex;
+    display: block;
 }
 
 .input-text {
